# ocaml-duckdb

./: dune-project
lib/: duckdb.ml  duckdb.mli  duckdb_intf.ml  duckdb_stubs.c  dune
lib/config/: discover.ml
test/: duckdb.ml  dune
