(library
 (public_name duckdb)
 (foreign_stubs
  (language c)
  (names duckdb_stubs)
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags :standard (:include c_library_flags.sexp))
 (libraries fpath core bigdecimal)
 (preprocess (pps ppx_jane)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./config/discover.exe)))
